fix: OperatorAdminView OpenAPI定義追加・型キャスト除去
